src/css/ui.css
:root {
  --color-blue: rgb(10, 132, 255);
  --color-blue-dark: rgb(0, 102, 225);
  --color-dark-border: rgb(54, 57, 89);
  --color-green: rgb(18, 188, 0);
  --color-green-dark: rgb(0, 158, 0);
  --color-red: rgb(215, 0, 34);
  --color-red-dark: rgb(185, 0, 4);
  --color-white: rgb(255, 255, 255);
}

body {
  margin: 0;
  font-family: Verdana, sans-serif;
  font-size: 16px;
  background: rgb(235, 235, 235);
  color: rgb(33, 37, 42);
  overflow-x: hidden;
}

.modal-dialog {
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  z-index: 200;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  transform: scale(.7);
  opacity: 0;
  transition: all 300ms;
  pointer-events: none;
}

.modal-dialog.visible {
  transform: scale(1);
  opacity: 1;
  pointer-events: all;
}

.modal-dialog ~ .modal-dialog-bg {
  position: fixed;
  z-index: 100;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  visibility: hidden;
  background: rgba(0, 0, 0, .8);
  opacity: 0;
  transition: all 300ms;
}

.modal-dialog.visible ~ .modal-dialog-bg {
  opacity: 1;
  visibility: visible;
}

.modal-dialog > div {
  width: 550px;
  max-width: 98%;
  max-height: 90vh;
  overflow: auto;
  border-width: 0;
  border-radius: 5px;
  background-color: var(--color-white);
  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .3);
}

.modal-dialog header {
  padding: 10px 15px;
  background-color: var(--color-blue);
  color: var(--color-white);
}

.modal-dialog section {
  padding: 30px 15px;
}

.modal-dialog input {
  width: 100%;
}

.modal-dialog aside {
  padding: 15px;
  background-color: rgb(240, 240, 240);
  text-align: right;
}

.modal-dialog .primary-action {
  background-color: var(--color-green);
}

.modal-dialog .primary-action::before {
  background: var(--color-green-dark);
}

.modal-dialog .secondary-action {
  margin-right: 5px;
  background-color: var(--color-red);
}

.modal-dialog .secondary-action::before {
  background: var(--color-red-dark);
}

.checkbox {
  display: inline-block;
  position: relative;
  margin-bottom: 5px;
  margin-right: 15px;
  padding-left: 30px;
  padding-top: 3px;
}

.checkbox input {
  position: absolute;
  left: -9999px;
  opacity: 0;
}

.checkbox label {
  cursor: pointer;
  font-size: 14px;
}

.checkbox label::before {
  content: '';
  position: absolute;
  z-index: 0;
  top: 1px;
  left: 0;
  margin-top: 2px;
  width: 18px;
  height: 18px;
  border: 2px solid var(--color-dark-border);
  border-radius: 2px;
  cursor: pointer;
  transition: all 250ms ease;
}

.checkbox input:checked + label::before {
  top: -1px;
  left: -3px;
  width: 8px;
  height: 17px;
  transform: rotate(40deg);
  border: 2px solid transparent;
  border-right-color: var(--color-green);
  border-bottom-color: var(--color-green);
  transform-origin: 100% 100%;
  backface-visibility: hidden;
}

button.circle-btn {
  width: 80px;
  height: 80px;
  border-radius: 50%;
  border: 0;
  cursor: pointer;
  transition: background ease 250ms;
}

button.circle-btn[data-action='delete-bookmark'] {
  background-color: var(--color-red);
}

button.circle-btn[data-action='delete-bookmark']:not([disabled]):hover {
  background-color: var(--color-red-dark);
}

button.circle-btn[data-action='keep-bookmark'] {
  background-color: rgb(5, 139, 0);
}

button.circle-btn[data-action='keep-bookmark']:not([disabled]):hover {
  background-color: rgb(25, 159, 20);
}

button.circle-btn[data-action='skip-bookmark'] {
  background-color: rgb(200, 200, 200);
}

button.circle-btn[data-action='skip-bookmark']:not([disabled]):hover {
  background-color: rgb(220, 220, 220);
}

button[disabled] {
  cursor: not-allowed;
}

#header {
  position: fixed;
  z-index: 10;
  top: 0;
  left: 0;
  right: 0;
  height: 100px;
  background: var(--color-white);
  border-bottom: 1px solid var(--color-dark-border);
  transition: height 250ms ease-in-out;
}

#logo {
  display: block;
  width: 467px;
  height: 100px;
  background: url('../images/logo-large.png') 25px center / 442px 70px no-repeat transparent;
}

#header-btn-wrapper {
  position: absolute;
  z-index: 20;
  top: 30px;
  right: 15px;
}

button.action-btn {
  padding: 8px 15px;
  transform: perspective(1px) translateZ(0);
  font-size: 16px;
  border: none;
  border-radius: 2px;
  background: var(--color-blue);
  color: var(--color-white);
  cursor: pointer;
  transition: color ease 500ms;
}

button.action-btn::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  transform: scaleX(0);
  border-radius: 2px;
  background: var(--color-blue-dark);
  transform-origin: 0 50%;
  transition-property: transform;
  transition-duration: 500ms;
  transition-timing-function: ease-out;
}

button.action-btn:hover::before {
  transform: scaleX(1);
  transition-timing-function: cubic-bezier(.52, 1.64, .37, .66);
}

#button-wrapper {
  margin-top: 50px;
  text-align: center;
}

#bookmark-card-wrapper,
#no-bookmarks:not([hidden]) {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

#bookmark-card {
  width: 450px;
  background: rgb(255, 255, 255);
  box-shadow: 2px 3px 5px rgba(0, 0, 0, .3);
}

#bookmark-title {
  font-weight: 700;
}

#whitelist-table {
  width: 100%;
  border-collapse: collapse;
}

#whitelist-table th, #whitelist-table td {
  padding: 10px 0;
  border-bottom: 1px solid rgb(150, 150, 150);
  text-align: left;
}

#whitelist-table td:first-child {
  padding-right: 10px;
  max-width: 230px;
  overflow: hidden;
  text-overflow: ellipsis;
}

#whitelist-table .actions {
  width: 90px;
  text-align: right;
}

#whitelist-table .icon img {
  width: 24px;
  height: 24px;
  vertical-align: middle;
  opacity: .5;
  transition: opacity ease 250ms;
}

#whitelist-table .icon img:hover {
  opacity: 1;
}

#whitelist-remove-all-wrapper {
  margin-top: 30px;
  text-align: center;
}

